--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bulma": "^0.8.0",
     "core-js": "^3.4.3",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vue-scrollto": "^2.17.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
